correct author name

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Your Name",
-            "email": "you@example.com"
+            "name": "GP10DevHts",
+            "email": "2000809725@std.kyu.ac.ug"
         }
     ],
     "minimum-stability": "dev",
